[package]
name = "sniffers"
version = "0.1.0"
edition = "2021"
description = "A simple file change sniffer."
authors = ["Nathan LeRoy"]
licens = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.82"
clap = "4.5.4"
data-encoding = "2.5.0"
glob = "0.3.1"
ring = "0.17.8"
rstest = "0.19.0"
